# starter-fastapi

./: .env  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: ad1af593565b_init.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: login.py  router.py  users.py
app/api/v1/endpoints/: sys_login.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  sys_user.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  sys_user.py
app/schemas/: __init__.py  sys_user.py
