[tool.poetry]
name = "starter-fastapi"
version = "0.1.0"
description = "Starter template for FastAPI app"
authors = ["xbmlz <997909544@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun.mirrors"
url = "https://mirrors.aliyun.com/pypi/simple"